--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Skata.ai - Сделай фото задачи, и мы решим её за секунды!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Skatai.ai</title>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
